--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
-	"name": "first-next",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"next": "14.1.0",
-		"prettier": "^3.2.5",
-		"react": "^18",
-		"react-dom": "^18",
-		"swiper": "^11.0.7",
-		"zustand": "^4.5.2"
-	},
-	"devDependencies": {
-		"eslint": "^8.56.0",
-		"eslint-config-next": "14.1.0"
-	}
+  "name": "next",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@types/react": "^18.2.69",
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "swiper": "^11.0.7",
+    "zustand": "^4.5.2"
+  }
 }
